[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datashadows"
version = "0.1.0"
description = "A library for processing datas"
readme = "README.md"
authors = [{name = "ponyofshadows", email = "ponyofshadows@outlook.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",       
    "matplotlib>=3.4.0",  
    "scienceplots>=1.0.0",
    "scipy>=1.7.0", 
    "pandas>=1.3.0", 
    "tikzplotlib>=0.10.0",
]

[project.urls]
"Homepage" = "https://github.com/ponyofshadows/datashadows"
"Bug Tracker" = "https://github.com/ponyofshadows/datashadows/issues"
"Documentation" = "https://github.com/ponyofshadows/datashadows#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[tool.setuptools]
packages = ["datashadows"]
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"